# meta_mapper

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
meta_mapper/: MetaMapper.py  master_template.json  meta_mapper_config.cfg  old_format_metadata_template.json  test_mapper.py
