[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "meta_mapper"
version = "1.0"
authors = [
  { name="Neil Kindlon"}, 
]
description = "Map fields in existing metadata documents to those in a new, standardized template."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"attrs==19.3.0",
	"bson==0.5.10",
	"importlib-metadata==1.7.0",
	"iniconfig==1.0.1",
	"more-itertools==8.4.0",
	"packaging==20.4",
	"pluggy==0.13.1",
	"py==1.9.0",
	"pymongo==3.11.0",
	"pyparsing==2.4.7",
	"pytest==6.0.1",
	"python-dateutil==2.8.1",
	"six==1.15.0",
	"system-groups-finder==1.1",
	"toml==0.10.1",
	"zipp==3.1.0",
]

[project.urls]
Homepage = "https://github.com/TheJacksonLaboratory/meta_mapper"
